--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-selenium
+beautifulsoup4==4.10.0
+certifi==2022.5.18
+chardet==4.0.0
+cryptography==1.7.1
+idna==2.10
+keyring==10.1
+keyrings.alt==1.3
+pyasn1==0.1.9
+pycrypto==2.6.1
+pygobject==3.22.0
+pyxdg==0.25
+requests==2.25.1
+SecretStorage==2.3.1
+selenium==3.141.0
+six==1.10.0
+soupsieve==2.1
+urllib3==1.26.9
